Highlight window and dim rest of view window, works in FF< but having issues withthe clipping in chrome

--- a/src/nv.d3.css
+++ b/src/nv.d3.css
@@ -112,6 +112,14 @@ svg .title {
   shape-rendering: crispEdges;
 }
 
+.nvd3.historicalStockChart .brush .extent {
+  fill-opacity: 0 !important;
+}
+
+.nvd3.historicalStockChart .brushBackground {
+  fill: #999;
+  fill-opacity: .5;
+}
 
 
 /**********
